recallable/tests/ui/derive_fail_non_struct.stderr
error: This derive macro can only be applied to structs
 --> tests/ui/derive_fail_non_struct.rs:4:1
  |
4 | / enum NotAStruct {
5 | |     Value(i32),
6 | | }
  | |_^
