recallable/tests/ui/derive_fail_non_struct.rs
use recallable::Recallable;

#[derive(Recallable)]
enum NotAStruct {
    Value(i32),
}

fn main() {}
